# audacity

./: .gitignore  CMakeLists.txt
cmake-proxies/: CMakeLists.txt
deeplearning-models/: CMakeLists.txt  modelcard-schema.json  schema.json
libraries/lib-network-manager/: Request.cpp  Request.h
libraries/lib-network-manager/curl/: CurlResponse.cpp  CurlResponseFactory.cpp
libraries/lib-utility/: MemoryX.h
scripts/ci/: configure.sh
src/: AudacityHeaders.h  CMakeLists.txt
src/effects/: AutoLabeler.cpp  AutoLabeler.h  Labeler.cpp  Labeler.h  SourceSep.cpp  SourceSep.h
src/effects/deeplearning/: DeepModel.cpp  DeepModel.h  DeepModelManager.cpp  DeepModelManager.h  EffectDeepLearning.cpp  EffectDeepLearning.h  ExploreHuggingFaceDialog.cpp  ExploreHuggingFaceDialog.h  ModelCard.cpp  ModelCard.h  ModelCardPanel.cpp  ModelCardPanel.h  ModelManagerPanel.cpp  ModelManagerPanel.h
