set( TARGET deeplearning-models )
set( TARGET_ROOT ${topdir}/deeplearning-models )

message( STATUS "========== Configuring ${TARGET} ==========" )
message(STATUS "${_PKGLIB}")

def_vars()

list( APPEND SOURCES
   resampler.pt
   modelcard-schema.json
)

message(STATUS "${_DEST}}")

foreach( source ${SOURCES} )
   set( src "${_SRCDIR}/${source}" )
   if( CMAKE_SYSTEM_NAME MATCHES "Darwin" )
      set( dst "${_DEST}/${TARGET}/${source}" )
   else()
      set( dst "${_PKGLIB}/${TARGET}/${source}" )
   endif()

   add_custom_command(
      DEPENDS
         "${src}"
      COMMAND
         ${CMAKE_COMMAND} -E make_directory "${_DEST}/${TARGET}"
      COMMAND
         ${CMAKE_COMMAND} -E copy "${src}" "${dst}"
      OUTPUT
         "${dst}"
   )

   list( APPEND OUTPUTS "${dst}" )
endforeach()

add_custom_target( ${TARGET} ALL DEPENDS ${OUTPUTS} SOURCES ${SOURCES} )

if( NOT CMAKE_SYSTEM_NAME MATCHES "Darwin" )
   if( NOT "${CMAKE_GENERATOR}" MATCHES "Visual Studio*")
      install( DIRECTORY "${_DEST}/${TARGET}"
               DESTINATION "${_PKGDATA}" )
   endif()
endif()
